---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const N := 255\nvar c : char\nvar c1 : char(1)\nvar c255 : char(255)\nvar s : string\nvar s1 : string(1)\nvar s255 : string(255)\n\nvar _v00 : string(N) := c\nvar _v01 : string(N) := c1\nvar _v02 : string(N) := c255\nvar _v03 : string(N) := s % runtime checked, always good\nvar _v04 : string(N) := s1\nvar _v05 : string(N) := s255\n"
---
"N"@(FileId(1), 6..7) [ConstVar(Const, No)]: int
"c"@(FileId(1), 19..20) [ConstVar(Var, No)]: char
"c1"@(FileId(1), 32..34) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(1)))
"c255"@(FileId(1), 49..53) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(2)))
"s"@(FileId(1), 70..71) [ConstVar(Var, No)]: string
"s1"@(FileId(1), 85..87) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(3)))
"s255"@(FileId(1), 104..108) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(4)))
"_v00"@(FileId(1), 128..132) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(5)))
"_v01"@(FileId(1), 154..158) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(7)))
"_v02"@(FileId(1), 181..185) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(9)))
"_v03"@(FileId(1), 210..214) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(11)))
"_v04"@(FileId(1), 267..271) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(13)))
"_v05"@(FileId(1), 294..298) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(15)))
"<root>"@(dummy) [Module(No)]: <error>

